--- a/manifest.json
+++ b/manifest.json
@@ -30,8 +30,8 @@
   ],
   "background": {
     "scripts": [
-      "js/background.js",
-      "js/jquery.min.js"
+      "js/jquery.min.js",
+      "js/background.js"
     ]
   },
   "icons": {
