--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 2,
-  "version": "1.2.0",
-  "description" : "PDD操作工具",
-  "name": "PDD操作工具",
+  "version": "1.2.1",
+  "description" : "订单操作工具",
+  "name": "订单操作工具",
   "browser_action": {
     "default_icon": "images/favicon.png",
-    "default_title": "PDD操作工具",
+    "default_title": "订单操作工具",
     "default_popup": "popup.html"
   },
   "content_scripts": [
