--- a/manifest.json
+++ b/manifest.json
@@ -15,13 +15,17 @@
         "https://*/*"
       ],
       "css":[
-        "css/contentScript.css"
+        "css/contentScript.css",
+        "css/jquery.range.css"
       ],
       "img": [
         "images/loading.gif"
       ],
       "js": [
         "js/jquery.min.js",
+        "js/jquery.range-min.js",
+        "js/file.saver.min.js",
+        "js/jszip.min.js",
         "js/contentScript.js"
       ],
       "run_at": "document_end",
